# IML-Compiler

./: .gitignore  LICENSE  README.md  iml-compiler.cabal
docs/: index.html
docs/plugin/highlight/: highlight.js
exec/: Main.hs
lib-vm/: BaseDecls.hs  ErrorHandlingGeneric.hs  Locations.hs  VirtualMachineIO.hs
presentation/: index.html
src/: Main.hs  Tokenizer.hs  Tokens.hs
src/IML/CodeGen/: CodeGen.hs  CompileUtils.hs  DefaultsPhase.hs  ProgramContext.hs  TypeCheck.hs  TypeCheckPhase.hs
src/IML/Parser/: GeneralParser.hs  Parser.hs  SyntaxTree.hs
src/IML/Token/: Tokenizer.hs  Tokens.hs
test/IML/Parser/: ParserSpec.hs
test/IML/Token/: TokenizeSpec.hs
