name:                iml-compiler
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/iml-compiler#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md


library
  hs-source-dirs:      src
  ghc-options:         -Wall
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
  exposed-modules:     IML.Token.Tokens, IML.Token.Tokenizer, IML.Parser.Parser

executable iml-compiler
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
  other-modules:       IML.Token.Tokens, IML.Token.Tokenizer

test-suite iml-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  ghc-options:         -Wall -ddump-ds
  main-is:             Spec.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, hspec == 2.*, iml-compiler
  other-modules:       IML.Token.TokenizeSpec, IML.Parser.ParserSpec
  build-tool-depends:  hspec-discover:hspec-discover == 2.*
