cabal-version:       2.2
name:                iml-compiler
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/iml-compiler#readme
license:             MIT
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md

common shared-properties
  default-language: Haskell2010
  build-depends:
    base >= 4.7 && < 5
  ghc-options:
    -Wall

library
  import: shared-properties
  hs-source-dirs:      src
  exposed-modules:     IML.Token.Tokens, IML.Token.Tokenizer,
                       IML.Parser.Parser, IML.Parser.GeneralParser, IML.Parser.SyntaxTree

executable iml-compiler
  import: shared-properties
  hs-source-dirs:      exec
  main-is:             Main.hs
  build-depends:       iml-compiler

test-suite iml-tests
  import: shared-properties
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  ghc-options:         -Wall -ddump-ds
  main-is:             Spec.hs
  build-depends:       hspec == 2.*, iml-compiler
  other-modules:       IML.Token.TokenizeSpec, IML.Parser.ParserSpec
  build-tool-depends:  hspec-discover:hspec-discover == 2.*
